--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f7f7f7;
+  background-color: #262c35;
 }
 
 a {
