--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,4 +22,9 @@ a {
 
 .scroll-chat {
   -webkit-overflow-scrolling: touch;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+.scroll-chat > * {
+  -webkit-transform: translateZ(0px);
 }
